# JuliaBox

./: .gitignore
building_your_own_sysimage/: README.md
jlunaapp/: CMakeLists.txt  main.cpp
make_a_gui_app_with_julia/: README.md
make_a_gui_app_with_julia/myapp/: Project.toml
make_a_gui_app_with_julia/myapp/src/: myapp.jl
make_a_gui_app_with_julia/myapp/src/qml/: myapp.qml
make_an_app_with_julia/: README.md
make_an_app_with_julia/myapp/: Project.toml  compile.jl
make_an_app_with_julia/myapp/src/: myapp.jl
qtjluna/: CMakeLists.txt  main.cpp
qtproject-clion-and-qtdesignstudio/qmlclion/: CMakeLists.txt  Main.qml  main.cpp
